fix gradient cutting off

--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 body {
-  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
   height: 100vh;
 }
 h1 {
   color: white;
   text-shadow: 1px 1px 2px rgba(0,0,0,1);
+}
+#app {
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
 .avatar {
   padding-right: 10px;
